Initial commit: Global Economy Map with multiple data sources integration

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+# .env*
 
 # vercel
 .vercel
@@ -39,3 +39,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# ACLED 데이터 파일 (대용량이므로 Git에서 제외)
+public/data/acled/*.csv
+!public/data/acled/sample_data.csv
